# erc20-demurrage-token

./: .gitignore  .gitlab-ci.yml  CAVEAT  Makefile  README.md  ROADMAP
doc/texinfo/: Makefile  contract.texi  index.texi  overview.texi  tools.texi  usecase.texi
python/: CHANGELOG  MANIFEST.in  Makefile  requirements.txt  run_tests.sh  setup.cfg  setup.py  test.sh  test_requirements.txt
python/config/: eth.ini  session.ini
python/erc20_demurrage_token/: __init__.py  demurrage.py  expiry.py  seal.py  token.py
python/erc20_demurrage_token/data/: DemurrageTokenMultiCap.json  DemurrageTokenMultiNocap.json  DemurrageTokenSingleCap.json  DemurrageTokenSingleNocap.json  DemurrageTokenSingleNocap.metadata.json
python/erc20_demurrage_token/data/config/: token.ini
python/erc20_demurrage_token/runnable/: #publish.py#  .#publish.py  apply.py  deploy.py  publish.py
python/erc20_demurrage_token/sim/: __init__.py  error.py  sim.py
python/erc20_demurrage_token/unittest/: __init__.py  base.py  newbase.py
python/examples/: sim.py  sim_noredistribute.py
python/man/: erc20-demurrage-token-publish.custom.groff  erc20-demurrage-token-publish.head.groff  erc20-demurrage-token-publish.overrides
python/sarafu_token/: __init__.py  token.py
python/sarafu_token/data/: RedistributedDemurrageToken.json
python/sarafu_token/runnable/: deploy.py
python/sarafu_token/runnable/legacy/: deploy.py
python/tests/: base.py  bench.py  bench_gas.py  test_amounts.py  test_basic.py  test_burn.py  test_cap.py  test_demurrage.py  test_demurrage.py.old  test_demurrage_ext.py  test_expiry.py  test_growth.py  test_mint.py  test_period.py  test_pure.py  test_redistribution.py  test_redistribution_real.py  test_redistribution_single.py  test_redistribution_unit.py  test_remainder.py  test_seal.py  test_single.py
python/tests/sim/: tests_sim.py  tests_sim_limit.py
solidity/: DemurrageTokenMultiCap.sol  DemurrageTokenMultiNocap.sol  DemurrageTokenSingleCap.sol  DemurrageTokenSingleNocap.sol  Makefile  RedistributedDemurrageToken.sol
