[metadata]
name = sarafu-token
version = 0.0.1a8
description = ERC20 token with redistributed continual demurrage
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/sarafu-token
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	sarafu_token
	sarafu_token.runnable
install_requires =
	chainlib~=0.0.3a1
	crypto-dev-signer~=0.4.14b3


[options.package_data]
* =
 	data/RedistributedDemurrageToken.bin
 	data/RedistributedDemurrageToken.json

[options.entry_points]
console_scripts =
	sarafu-token-deploy = sarafu_token.runnable.deploy:main
