[metadata]
name = erc20-demurrage-token
version = 0.0.5a6
description = ERC20 token with redistributed continual demurrage
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/ccicnet/erc20-demurrage-token
keywords =
	ethereum
	blockchain
	cryptocurrency
	erc20
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	erc20_demurrage_token
	erc20_demurrage_token.runnable
	erc20_demurrage_token.data
	erc20_demurrage_token.sim

[options.package_data]
* =
 	data/DemurrageToken*.bin
 	data/DemurrageToken*.json

[options.entry_points]
console_scripts =
	erc20-demurrage-token-deploy = erc20_demurrage_token.runnable.deploy:main
