[metadata]
name = erc20-demurrage-token
version = 0.5.1
description = ERC20 token with redistributed continual demurrage
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://holbrook.no/src/erc20-demurrage-token/log.html
keywords =
	ethereum
	blockchain
	cryptocurrency
	erc20
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
	Topic :: Software Development :: Libraries
	#Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.8
packages =
	erc20_demurrage_token
	erc20_demurrage_token.runnable
	erc20_demurrage_token.data
	erc20_demurrage_token.sim
	erc20_demurrage_token.unittest

[options.package_data]
* =
 	data/DemurrageToken*.bin
 	data/DemurrageToken*.json

[options.entry_points]
console_scripts =
	erc20-demurrage-token-publish = erc20_demurrage_token.runnable.publish:main
